--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KERRI - WorkShop</title>
+    <title>KERRI</title>
 
     <!-- google font style -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito&display=swap" rel="stylesheet">
@@ -31,23 +31,19 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#services">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="#clients">Client</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Client</a>
+                <a class="nav-link" href="#works">Portfolio</a>
               </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#contacts">Contact</a>
               </li>
 
             </ul>
@@ -56,9 +52,8 @@
         </div>
     </nav>
     <!-- =============== end navbar =============== -->
-
     <!-- =============== start header =============== -->
-    <header class="vh-100">
+    <header class="vh-100 mb-5" >
         <div class="header-layer w-100 h-100 d-flex justify-content-center align-items-center">
             <div class="header-content text-center text-white">
                 <h4>welcome</h4>
@@ -71,9 +66,8 @@
         </div>
     </header>
     <!-- =============== end header =============== -->
-    
     <!-- =============== start service section =============== -->
-    <section id="services" class="py-5">
+    <section id="services" class="py-3 mb-5">
       <div class="container">
         <div class="section-head text-center">
           <h2 class="mb-3">Our <span class="fw-bold">Services</span></h2>
@@ -82,7 +76,7 @@
 
         <div class="row mt-3">
           <div class="col-md-4">
-            <div class="service text-center p-1 mb-5">
+            <div class="service text-center p-2 mb-5 shadow rounded-3">
               <i class="fas fa-chart-line"></i>
               <h5 class="my-3 fw-bold">Graphic Design</h5>
               <div class="line mx-auto my-2"></div>
@@ -90,7 +84,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="service text-center p-1 mb-5">
+            <div class="service text-center p-2 mb-5 shadow rounded-3">
               <i class="fas fa-mug-hot"></i>
               <h5 class="my-3 fw-bold">Ulitmate Color</h5>
               <div class="line mx-auto my-2"></div>
@@ -98,7 +92,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="service text-center p-1 mb-5">
+            <div class="service text-center p-2 mb-5 shadow rounded-3">
               <i class="fas fa-chart-line"></i>
               <h5 class="my-3 fw-bold">Graphic Design</h5>
               <div class="line mx-auto my-2"></div>
@@ -106,7 +100,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="service text-center p-1 mb-5">
+            <div class="service text-center p-2 mb-5 shadow rounded-3">
               <i class="fas fa-chart-line"></i>
               <h5 class="my-3 fw-bold">Graphic Design</h5>
               <div class="line mx-auto my-2"></div>
@@ -114,7 +108,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="service text-center p-1 mb-5">
+            <div class="service text-center p-2 mb-5 shadow rounded-3">
               <i class="fas fa-chart-line"></i>
               <h5 class="my-3 fw-bold">Graphic Design</h5>
               <div class="line mx-auto my-2"></div>
@@ -122,7 +116,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="service text-center p-1 mb-5">
+            <div class="service text-center p-2 mb-5 shadow rounded-3">
               <i class="fas fa-chart-line"></i>
               <h5 class="my-3 fw-bold">Graphic Design</h5>
               <div class="line mx-auto my-2"></div>
@@ -133,9 +127,8 @@
       </div>
     </section>
     <!-- =============== end service section =============== -->
-
     <!-- =============== start clients section =============== -->
-    <section id="clients"  class="py-5">
+    <section id="clients"  class="py-3 mb-5">
       <div class="container">
         <div class="section-head text-center">
           <h2 class="mb-3">Our <span class="fw-bold">Clients</span></h2>
@@ -190,9 +183,8 @@
       </div>
     </section>
     <!-- =============== end clients section =============== -->
-
     <!-- =============== start works section =============== -->
-    <section id="works"  class="py-5">
+    <section id="works"  class="py-3 mb-5">
       <div class="container">
         <div class="section-head text-center">
           <h2 class="mb-3">Our <span class="fw-bold">Works</span></h2>
@@ -405,7 +397,55 @@
       </div>
     </section>
     <!-- =============== end works section =============== -->
+    <!-- =============== start contacts section =============== -->
+    <section id="contacts" class="py-3 mb-5">
+      <div class="container">
+        <div class="section-head text-center">
+      <h2 class="mb-3">Contact <span class="fw-bold">Us</span></h2>
+      <p>It is a long established fact that a reader will be of a page when<br>
+        established fact looking at its layout.
+        </p>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+              <div class="contact-item text-center">
+                  <i class="fas fa-mobile-alt fa-3x my-3 shadow-lg"></i>
+                  <h5>Call Us On</h5>
+                  <p>+985 123 7856</p>
+              </div>
+          </div>
+          <div class="col-md-6">
+              <div class="contact-item text-center">
+                  <i class="fas fa-envelope-open  my-3 fa-3x shadow-lg"></i>
+                  <h5>Text Us On</h5>
+                  <p>+985 123 7856</p>
+              </div>
+          </div>
 
+      </div>
+
+      <form class="mt-3">
+          <div class="row gy-3">
+              <div class="col-md-6">
+                  <input type="text" class="form-control py-3" placeholder="your Name*">
+              </div>
+              <div class="col-md-6">
+                  <input type="email" class="form-control py-3" placeholder="your Email*">
+              </div>
+              <div class="col-md-12">
+                  <input type="text" placeholder="Your subject" class="form-control py-3">
+              </div>
+              <div class="col-md-12">
+                  <textarea name="" id="" rows="5" class="form-control" placeholder="your Message"></textarea>
+              </div>
+
+          </div>
+          <button class="btn my-3 float-end" type="submit">send Message</button>
+      </form>
+      </div>
+
+    </section>
+    <!-- =============== end contacts section =============== -->
 
 
     
